@@ -145,8 +145,8 @@ dependencies {
     implementation fg.deobf("curse.maven:mantle-74924:3784500")
     implementation fg.deobf("curse.maven:tinkers-construct-74072:3784732")
 //    implementation fg.deobf("curse.maven:applied-energistics-2-223794:3646192")
-    implementation fg.deobf("curse.maven:terrablender-563928:3725996")
-    implementation fg.deobf("curse.maven:oh-the-biomes-youll-go-247560:3811457")
+//    implementation fg.deobf("curse.maven:terrablender-563928:3725996")
+//    implementation fg.deobf("curse.maven:oh-the-biomes-youll-go-247560:3811457")
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
