@@ -3,8 +3,8 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-version=1.18.2-0.9.0.5
-forgeversion=1.18.2-40.1.31
+version=1.18.2-0.9.0.6
+forgeversion=1.18.2-40.1.51
 
 jei_version=1.18.2:9.5.5.174
 patchouli_version=1.18.2-66
