@@ -56,3 +56,5 @@ public net.minecraft.client.particle.PortalParticle <init>(Lnet/minecraft/client
 public net.minecraft.world.item.crafting.RecipeManager m_44054_(Lnet/minecraft/world/item/crafting/RecipeType;)Ljava/util/Map; # getRecipes
 public net.minecraft.client.particle.LavaParticle <init>(Lnet/minecraft/client/multiplayer/ClientLevel;DDD)V # LavaParticle
 public net.minecraft.world.level.biome.Biome m_47567_()Lnet/minecraft/world/level/biome/Biome$BiomeCategory; # getBiomeCategory
+public net.minecraft.world.entity.ai.behavior.GiveGiftToHero f_147550_ # GIFTS
+public-f net.minecraft.world.entity.ai.village.poi.PoiType f_27326_ # maxTickets
