@@ -151,6 +151,7 @@
   "block.productivebees.sugarbag_nest": "Sugarbag Nest",
   "block.productivebees.wax_block": "Wax Block",
   "block.productivebees.warped_bee_nest": "Warped Bee Nest",
+  "entity.minecraft.villager.productivebees.beekeeper": "Beekeeper",
   "entity.productivebees.agate_bee": "Agate Bee",
   "entity.productivebees.alexandrite_bee": "Alexandrite Bee",
   "entity.productivebees.alfsteel_bee": "Alfsteel Bee",
