@@ -1,0 +1,5 @@
+{
+    "villager": {
+        "hat": "partial"
+    }
+}
