@@ -1,5 +1,6 @@
 1.18.2-0.9.0.6
 
+-- Added beekeeper villager profession
 -- Wax and comb blocks can catch fire
 -- Wax blocks burn indefinitely
 
